--- a/public/index.html
+++ b/public/index.html
@@ -14,9 +14,10 @@
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
     <meta name="theme-color" content="#000000">
-    <!--<meta name="title" content="Watch live football, match replays & highlights videos">-->
-    <!--<meta property="og:title" content="Watch live football, match replays & highlights videos">-->
-    <!--<meta property="og:image" content="%PUBLIC_URL%/assets/images/lavi-meta-image.png">-->
+    <meta name="title" content="Download videos from the web">
+    <meta property="og:title" content="Download videos from the web">
+    <meta property="og:image" content="%PUBLIC_URL%/favicon.png">
+    <meta name="propeller" content="7ce5d7fdfefac15fb6f632b314bb1031">
     <!--
       manifest.json provides metadata used when your web app is added to the
       homescreen on Android. See https://developers.google.com/web/fundamentals/engage-and-retain/web-app-manifest/
@@ -36,7 +37,7 @@
       work correctly both with client-side routing and a non-root public URL.
       Learn how to configure a non-root public URL by running `npm run build`.
     -->
-    <title>Turbodl</title>
+    <title>Download videos from the web</title>
 </head>
 <body>
 <noscript>
