--- a/public/index.html
+++ b/public/index.html
@@ -26,8 +26,8 @@
     -->
     <link rel="manifest" href="%PUBLIC_URL%/manifest.json">
     <link rel="shortcut icon" href="%PUBLIC_URL%/favicon.png">
-    <link href="https://fonts.googleapis.com/css?family=Roboto:100,300,400,500,700,900,100i" rel="stylesheet">
-
+    <!--<link href="https://fonts.googleapis.com/css?family=Roboto:100,300,400,500,700,900,100i" rel="stylesheet">-->
+    <link href="https://fonts.googleapis.com/css?family=Roboto:400,700" rel="stylesheet">
     <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0-beta.2/css/bootstrap.min.css"
           integrity="sha384-PsH8R72JQ3SOdhVi3uxftmaW6Vc51MKb0q5P2rRUpPvrszuE4W1povHYgTpBfshb" crossorigin="anonymous">
     <!--
