--- a/public/index.html
+++ b/public/index.html
@@ -16,8 +16,8 @@
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
     <meta name="theme-color" content="#000000">
-    <meta name="title" content="Download videos from the web">
-    <meta property="og:title" content="Download videos from the web">
+    <meta name="title" content="Video Downloader">
+    <meta property="og:title" content="Video Downloader">
     <meta property="og:image" content="%PUBLIC_URL%/favicon.png">
     <meta name="propeller" content="7ce5d7fdfefac15fb6f632b314bb1031">
     <!--
@@ -39,7 +39,7 @@
       work correctly both with client-side routing and a non-root public URL.
       Learn how to configure a non-root public URL by running `npm run build`.
     -->
-    <title>Download videos from the web</title>
+    <title>Videodl</title>
 </head>
 <body>
 <noscript>
